--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
                 <div class="col-lg-6 py-6 pb-0 pt-lg-0">
                     <h3 class="text-primary mb-3">I'm</h3>
                     <h1 class="display-3 mb-3">Adham Ahmed</h1>
-                    <h2 class="typed-text-output d-inline"></h2>
-                    <div class="typed-text d-none">Software Engineer, Full-Stack Web Developer</div>
+                    <h2>Software Engineer</h2>
                 </div>
                 <div class="col-lg-6">
                     <img class="img-fluid" src="img/profile3.png" alt="">
